--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
     <uses-permission android:name="android.permission.CHANGE_COMPONENT_ENABLED_STATE"/>
     <uses-permission android:name="android.permission.REBOOT"/>
 
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:name=".LauncherApplication"
@@ -65,6 +68,19 @@
                 <category android:name="android.intent.category.MONKEY" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".AppService"
+            android:enabled="true" />
+
+        <receiver
+            android:name=".event.PoliceEventReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="ir.markazandroid.police.event.BaseEvent.ACTION_EVENT" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
